--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -150,13 +150,19 @@
     "message": "टाइमलाइन"
   },
   "mzkvxp": {
-    "message": "सक्षम होने पर, AI पृष्ठ के दाईं ओर एक इंटरैक्टिव टाइमलाइन दिखाई देगी।"
+    "message": "सक्षम होने पर, AI बातचीत पृष्ठ के दाईं ओर एक इंटरैक्टिव टाइमलाइन दिखाई देगी।"
   },
   "vkpmzx": {
-    "message": "वार्तालाप नेविगेट करने के लिए कीबोर्ड ↑ / ↓ कुंजी का उपयोग करें"
+    "message": "कीबोर्ड ↑ / ↓ कुंजियाँ बातचीत नोड्स के बीच नेविगेट करने के लिए"
   },
   "xpvmkz": {
-    "message": "सक्षम होने पर, वार्तालाप रिकॉर्ड के बीच तेज़ी से जाने के लिए कीबोर्ड ↑ / ↓ कुंजी का उपयोग करें।"
+    "message": "सक्षम होने पर, बातचीत नोड्स के बीच जल्दी से कूदने के लिए कीबोर्ड ↑ / ↓ कुंजियों का उपयोग करें।"
+  },
+  "pxmzkv": {
+    "message": "📌 मुख्य बातचीत चिह्नित करें"
+  },
+  "kzxvpm": {
+    "message": "इसे महत्वपूर्ण के रूप में चिह्नित करने के लिए टाइमलाइन में बातचीत नोड पर लंबे समय तक दबाएं।"
   },
   "xmvkpz": {
     "message": "वार्तालाप इनपुट बॉक्स"
@@ -193,6 +199,9 @@
   },
   "xvpmkz": {
     "message": "पसंदीदा सूची देखें"
+  },
+  "qoytxz": {
+    "message": "यह सुविधा हमेशा सक्षम है और इसे बंद नहीं किया जा सकता"
   }
 }
 
