--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -150,13 +150,19 @@
     "message": "タイムライン"
   },
   "mzkvxp": {
-    "message": "有効にすると、AIページの右側にインタラクティブなタイムラインが表示されます。"
+    "message": "有効にすると、AI会話ページの右側にインタラクティブなタイムラインが表示されます。"
   },
   "vkpmzx": {
-    "message": "キーボード ↑ / ↓ キーで会話をナビゲート"
+    "message": "キーボード ↑ / ↓ キーで会話ノード間を移動"
   },
   "xpvmkz": {
-    "message": "有効にすると、キーボード ↑ / ↓ キーで会話記録間を素早くジャンプできます。"
+    "message": "有効にすると、キーボードの ↑ / ↓ キーを使用して会話ノード間を素早く移動できます。"
+  },
+  "pxmzkv": {
+    "message": "📌 重要な会話をマーク"
+  },
+  "kzxvpm": {
+    "message": "タイムライン上の会話ノードを長押しすると、重要としてマークできます。"
   },
   "xmvkpz": {
     "message": "会話入力ボックス"
@@ -193,6 +199,9 @@
   },
   "xvpmkz": {
     "message": "お気に入りリストを表示"
+  },
+  "qoytxz": {
+    "message": "この機能は常に有効で、無効にできません"
   }
 }
 
