--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -150,13 +150,19 @@
     "message": "타임라인"
   },
   "mzkvxp": {
-    "message": "활성화하면 AI 페이지 오른쪽에 상호작용 가능한 타임라인이 표시됩니다."
+    "message": "활성화하면 AI 대화 페이지 오른쪽에 상호작용 가능한 타임라인이 표시됩니다."
   },
   "vkpmzx": {
-    "message": "키보드 ↑ / ↓ 키로 대화 탐색"
+    "message": "키보드 ↑ / ↓ 키로 대화 노드 간 이동"
   },
   "xpvmkz": {
-    "message": "활성화하면 키보드 ↑ / ↓ 키로 대화 기록 간에 빠르게 이동할 수 있습니다."
+    "message": "활성화하면 키보드 ↑ / ↓ 키를 사용하여 대화 노드 간을 빠르게 이동할 수 있습니다."
+  },
+  "pxmzkv": {
+    "message": "📌 중요한 대화 표시"
+  },
+  "kzxvpm": {
+    "message": "타임라인의 대화 노드를 길게 눌러 중요 표시를 할 수 있습니다."
   },
   "xmvkpz": {
     "message": "대화 입력 상자"
@@ -193,6 +199,9 @@
   },
   "xvpmkz": {
     "message": "즐겨찾기 목록 보기"
+  },
+  "qoytxz": {
+    "message": "이 기능은 항상 활성화되어 있으며 끌 수 없습니다"
   }
 }
 
