--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -150,13 +150,19 @@
     "message": "Временная шкала"
   },
   "mzkvxp": {
-    "message": "При включении интерактивная временная шкала появится справа на странице AI."
+    "message": "При включении интерактивная временная шкала появится справа на странице разговора AI."
   },
   "vkpmzx": {
-    "message": "Использовать клавиши клавиатуры ↑ / ↓ для навигации по разговорам"
+    "message": "Клавиши ↑ / ↓ для навигации между узлами разговора"
   },
   "xpvmkz": {
-    "message": "При включении используйте клавиши клавиатуры ↑ / ↓ для быстрого перехода между записями разговоров."
+    "message": "При включении используйте клавиши ↑ / ↓ для быстрого перехода между узлами разговора."
+  },
+  "pxmzkv": {
+    "message": "📌 Отметить ключевые беседы"
+  },
+  "kzxvpm": {
+    "message": "Долго нажмите на узел разговора на временной шкале, чтобы отметить его как важный."
   },
   "xmvkpz": {
     "message": "Поле ввода разговора"
@@ -193,6 +199,9 @@
   },
   "xvpmkz": {
     "message": "Просмотреть список избранного"
+  },
+  "qoytxz": {
+    "message": "Эта функция всегда включена и не может быть отключена"
   }
 }
 
