--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -150,13 +150,19 @@
     "message": "ไทม์ไลน์"
   },
   "mzkvxp": {
-    "message": "เมื่อเปิดใช้งาน ไทม์ไลน์แบบโต้ตอบจะปรากฏทางด้านขวาของหน้า AI"
+    "message": "เมื่อเปิดใช้งาน ไทม์ไลน์แบบโต้ตอบจะปรากฏทางด้านขวาของหน้าการสนทนา AI"
   },
   "vkpmzx": {
-    "message": "ใช้ปุ่มคีย์บอร์ด ↑ / ↓ เพื่อนำทางการสนทนา"
+    "message": "ปุ่ม ↑ / ↓ บนคีย์บอร์ดเพื่อนำทางระหว่างโหนดการสนทนา"
   },
   "xpvmkz": {
-    "message": "เมื่อเปิดใช้งาน ใช้ปุ่มคีย์บอร์ด ↑ / ↓ เพื่อข้ามไปมาระหว่างบันทึกการสนทนาอย่างรวดเร็ว"
+    "message": "เมื่อเปิดใช้งาน ใช้ปุ่ม ↑ / ↓ บนคีย์บอร์ดเพื่อข้ามระหว่างโหนดการสนทนาอย่างรวดเร็ว"
+  },
+  "pxmzkv": {
+    "message": "📌 ทำเครื่องหมายการสนทนาสำคัญ"
+  },
+  "kzxvpm": {
+    "message": "กดค้างที่โหนดการสนทนาในไทม์ไลน์เพื่อทำเครื่องหมายว่าสำคัญ"
   },
   "xmvkpz": {
     "message": "กล่องป้อนข้อมูลการสนทนา"
@@ -193,6 +199,9 @@
   },
   "xvpmkz": {
     "message": "ดูรายการโปรด"
+  },
+  "qoytxz": {
+    "message": "คุณสมบัตินี้เปิดใช้งานอยู่เสมอและไม่สามารถปิดได้"
   }
 }
 
