--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -150,13 +150,19 @@
     "message": "时间轴"
   },
   "mzkvxp": {
-    "message": "启用后，AI 页面右侧会显示可交互时间轴。"
+    "message": "启用后，在AI 对话页面右侧会显示可交互时间轴。"
   },
   "vkpmzx": {
-    "message": "使用键盘 ↑ / ↓ 键跳转对话"
+    "message": "键盘 ↑ / ↓ 键跳转对话节点"
   },
   "xpvmkz": {
-    "message": "启用后，使用键盘 ↑ / ↓ 键，在对话记录间快速跳转。"
+    "message": "启用后，使用键盘 ↑ / ↓ 键，在对话节点间快速跳转。"
+  },
+  "pxmzkv": {
+    "message": "📌 标记重点对话"
+  },
+  "kzxvpm": {
+    "message": "长按时间轴上的对话节点，即可标记重点。"
   },
   "xmvkpz": {
     "message": "对话输入框"
@@ -190,5 +196,8 @@
   },
   "xvpmkz": {
     "message": "查看收藏列表"
+  },
+  "qoytxz": {
+    "message": "此功能默认开启，无法关闭"
   }
 }
