--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -150,13 +150,19 @@
     "message": "時間軸"
   },
   "mzkvxp": {
-    "message": "啟用後，AI 頁面右側會顯示可互動時間軸。"
+    "message": "啟用後，在AI 對話頁面右側會顯示可互動時間軸。"
   },
   "vkpmzx": {
-    "message": "使用鍵盤 ↑ / ↓ 鍵跳轉對話"
+    "message": "鍵盤 ↑ / ↓ 鍵跳轉對話節點"
   },
   "xpvmkz": {
-    "message": "啟用後，使用鍵盤 ↑ / ↓ 鍵，在對話記錄間快速跳轉。"
+    "message": "啟用後，使用鍵盤 ↑ / ↓ 鍵，在對話節點間快速跳轉。"
+  },
+  "pxmzkv": {
+    "message": "📌 標記重點對話"
+  },
+  "kzxvpm": {
+    "message": "長按時間軸上的對話節點，即可標記重點。"
   },
   "xmvkpz": {
     "message": "對話輸入框"
@@ -193,6 +199,9 @@
   },
   "xvpmkz": {
     "message": "查看收藏列表"
+  },
+  "qoytxz": {
+    "message": "此功能預設開啟，無法關閉"
   }
 }
 
