--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline: The Most Powerful AI Efficiency Assistant: ChatGPT, Gemini"
   },
   "extDescription": {
-    "message": "Features: Copy LaTeX formulae, conversation timeline, Enter key for newline, Prompt assistance. Double your AI efficiency!"
+    "message": "Copy LaTeX formulae, conversation timeline, Enter key for newline, Prompt assistance. Double your AI efficiency!"
   },
   "qwxpzm": {
     "message": "Star"
