--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline：最強大的AI提效助手：ChatGPT、Gemini、DeepSeek"
   },
   "extDescription": {
-    "message": "功能描述：複製LaTeX公式、對話時間軸、Enter鍵換行、Prompt輔助，支援所有主流AI平台，助您使用AI的效率翻倍。"
+    "message": "複製LaTeX公式、可交互對話時間軸、Enter鍵換行、Prompt提示詞輔助，支援所有主流AI平台，助您使用AI的效率翻倍。"
   },
   "qwxpzm": {
     "message": "收藏"
