--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline：最强大的AI提效助手：ChatGPT、Gemini、DeepSeek"
   },
   "extDescription": {
-    "message": "功能描述：复制LaTeX公式、对话时间轴、Enter键换行、Prompt辅助，支持所有主流AI平台，助您使用AI的效率翻倍。"
+    "message": "复制LaTeX公式、可交互对话时间轴、Enter键换行、Prompt提示词辅助，支持所有主流AI平台，助您使用AI的效率翻倍。"
   },
   "qwxpzm": {
     "message": "收藏"
